# echo

./: .coverage  .cursorrules  .dockerignore  .env.example  .gitignore  .repomixignore  CHANGELOG.md  DATABASE.md  DEVELOPER_GUIDE.md  Dockerfile  README.md  ROADMAP.md  TURBO_MIGRATION.md  biome.json  cline-tasks.md  deploy.sh  docker-compose.yml  docker-start.sh  echo.code-workspace  generate_youtube_token.py  main.py  oauth-implementation-summary.md  oauth-testing-guide.md  package-lock.json  package.json  pnpm-lock.yaml  prd.txt  pytest.ini  repomix-output.xml  requirements.txt  roadmap.txt  run_tests.sh  start-api.sh  start-services.sh  stop-services.sh  tsconfig.json  turbo.json  youtube_uploader.py
.ai/: midday-tsconfig-setup.md  new.md  tanstack-router.json
.ai_docs/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
.claude/: CLAUDE.md  settings.local.json
.clinerules/: cline-continuous-improvement-protocol.md  self-improving-cline.md
.cursor/: mcp.json
.doing/: tasks.md
ai_docs/: prd.md  prompt-new.md  (+2 more)
api/: .pre-commit-config.yaml  Dockerfile  Makefile  api-repomix-output.txt  pyproject.toml  python_settings.txt
api/tests/: conftest.py
api/tests/e2e/: __init__.py  test_deployment.py
api/tests/integration/ai/: test_gemini.py
api/tests/integration/api/: test_health.py
api/tests/integration/storage/: test_gcs.py
api/tests/mocks/: storage.py
api/tests/unit/domain/: test_enums.py  test_metadata.py  test_video.py
api/video_processor/: .coverage  README.md  test_audio_processing.py  youtube_uploader_README.md
api/video_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/video_processor/adapters/ai/: __init__.py  cache.py  parallel.py
api/video_processor/adapters/storage/: __init__.py  gcs.py
api/video_processor/application/dtos/: __init__.py  job_dto.py
api/video_processor/application/interfaces/: __init__.py  repositories.py
api/video_processor/application/services/: metadata.py  subtitle.py  transcription.py  video_processor.py
api/video_processor/config/: settings.py
api/video_processor/domain/: __init__.py
api/video_processor/domain/models/: __init__.py  job.py
api/video_processor/infrastructure/: monitoring.py
api/video_processor/infrastructure/api/: __init__.py  auth.py  server.py
api/video_processor/infrastructure/api/routes/: auth_routes.py  videos.py
api/video_processor/infrastructure/api/schemas/: __init__.py  video.py
api/video_processor/infrastructure/config/: container.py  secrets.py
api/video_processor/infrastructure/messaging/: handlers.py
api/video_processor/infrastructure/repositories/: __init__.py  job_repository.py  video_repository.py
api/video_processor/services/storage/: __init__.py  factory.py  gcs.py
api/video_processor/tests/: conftest.py  test_titles_generation.py  test_youtube_uploader.py
api/video_processor/utils/: __init__.py  file_handling.py  profiling.py
apps/core/: .env.development  .env.example  .env.production  Dockerfile  README.md  README_OLD.md  alembic.ini  main.py  package.json  pyproject.toml
apps/core/.ai_docs/: migration_verification_checklist.md  progress.md
apps/core/alembic/: env.py
apps/core/alembic/versions/: deb5e8c9c1fd_create_video_processing_tables.py
apps/core/api/: endpoints.py
apps/core/api/endpoints/: __init__.py  jobs_endpoints.py  video_processing_endpoints.py
apps/core/api/schemas/: video_processing_schemas.py
apps/core/app/db/: engine.py  schemas.py  supabase_client.py  supabase_models.py
apps/core/config/secrets/: automations-457120-2c820f705e5e.json
apps/core/core/: config.py  exceptions.py
apps/core/lib/: __init__.py
apps/core/lib/ai/: __init__.py  ai_client_factory.py  base_adapter.py  gemini_adapter.py
apps/core/lib/auth/: supabase_auth.py
apps/core/lib/cache/: __init__.py  redis.py  redis_cache.py
apps/core/lib/database/: __init__.py  connection.py
apps/core/lib/messaging/: __init__.py  email.py
apps/core/lib/publishing/: publishing_interface.py  youtube_adapter.py
apps/core/lib/storage/: __init__.py  file_storage.py
apps/core/lib/utils/: ffmpeg_utils.py  file_utils.py  subtitle_utils.py
apps/core/models/: __init__.py  chat_model.py  enums.py  user_model.py  video_job_model.py  video_metadata_model.py  video_model.py
apps/core/operations/: __init__.py  chat_repository.py  transaction_repo.py  user_repository.py  video_job_repository.py  video_metadata_repository.py  video_repository.py
apps/core/services/: __init__.py  ai_service.py  auth_service.py  chat_service.py  job_service.py  metadata_service.py  user_service.py  video_processing_service.py
apps/core/src/: context.ts  trpc.ts
apps/core/src/db/: client.ts
apps/core/src/lib/: validation.ts
apps/core/src/lib/utils/: ffmpeg.ts
apps/core/src/middleware/: auth.ts  error.ts
apps/core/src/routers/: analytics.router.ts  auth.router.ts  index.ts  user.router.ts  video.router.improved.ts
apps/core/src/services/: video-processing.ts
apps/core/tests/: conftest.py  setup.ts  test_api.py
apps/core/tests/api/: test_jobs_api.py
apps/core/tests/integration/: conftest.py  test_video_processing_api.py
apps/core/tests/integration/api/: test_job_status_retrieval.py  test_video_upload_flow.py
apps/core/tests/operations/: test_video_job_repository.py
apps/core/tests/services/: test_job_service.py
apps/core/tests/unit/lib/ai/: __init__.py  test_ai_client_factory.py  test_gemini_adapter.py
apps/core/tests/unit/lib/auth/: __init__.py  test_supabase_auth.py
apps/core/tests/unit/lib/cache/: __init__.py  test_redis_cache.py
apps/core/tests/unit/lib/publishing/: test_youtube_adapter.py
apps/core/tests/unit/lib/storage/: __init__.py  test_file_storage.py
apps/core/tests/unit/lib/utils/: __init__.py  test_ffmpeg_utils.py  test_file_utils.py  test_subtitle_utils.py
apps/core/tests/unit/operations/: __init__.py  test_video_job_repository.py  test_video_metadata_repository.py  test_video_repository.py
apps/core/tests/unit/services/: test_user_service.py  test_video_processing_service.py
(+689 files in other folders)
