[project]
name = "echo"
version = "0.1.0"
description = "Video processing pipeline for Echo project"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Core FastAPI (SQLAlchemy removed - using Supabase)
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2", # [standard] includes websockets and other common needs
    # Pydantic & Settings
    "pydantic>=2.11.3", # Your current Pydantic
    "pydantic-settings",
    "python-dotenv>=1.1.0",
    # API & Web Interaction
    "httpx>=0.28.1",
    "python-multipart>=0.0.20", # For file uploads in FastAPI
    "jinja2>=3.1.6",
    # Authentication & Security
    "pyjwt>=2.10.1",
    "python-jose[cryptography]",
    "email-validator>=2.2.0",
    # Supabase (Official Python Client)
    "supabase>=2.10.0",
    # Google Cloud & AI
    "google-cloud-storage==2.10.0",
    "google-generativeai",
    "google-cloud-aiplatform", # Vertex AI
    "google-api-python-client>=2.80.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth>=2.40.1",
    "google-cloud-secret-manager>=2.16.0",
    # Video/Image Processing
    "ffmpeg-python",
    "pillow>=11.2.1",
    # Other Utilities
    "redis>=5.2.1",
    "openai>=1.75.0",
    # Cloud Functions (if still deploying parts as Cloud Functions)
    "functions-framework", # If you use Google Cloud Functions
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.41",
]

[project.optional-dependencies]
dev = [
    # Code Generation tools
    "sqlacodegen>=3.0.0rc5",         # For SQLAlchemy ORM models from DB schema
    "pydantic-to-typescript>=2.0.0", # For generating TS types from Pydantic models

    # Linters & Formatters
    "ruff>=0.4.0", # Covers linting, formatting, import sorting
    "mypy>=1.15.0",

    # Testing
    "pytest>=8.3.5",
    "pytest-asyncio",
    "pytest-mock==3.11.1",
    "pytest-cov==4.1.0",

    # Dev tools
    "pre-commit>=3.0.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false # Keep as false if you have untyped legacy code
namespace_packages = true
explicit_package_bases = true
# Exclude the generated pydantic models path if it causes mypy issues or you don't want to type-check generated code.
exclude = ['venv', '.venv', '__pycache__', '.pytest_cache', 'apps/core/app/db_pydantic_models/']
# Ignore missing imports for now to focus on our code
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
# Adjust 'include' if your main Python package source code is structured differently
# e.g., if 'apps/core/src/echo_core' is your package, then include = ["echo_core*"] and where = ["src"]
# For now, assuming 'apps.core' is part of your import paths.
include = ["apps.core*"]
exclude = ["tests*", "video_processor*"]

[tool.ruff]
# Ruff configuration can go here or in a separate ruff.toml or .ruff.toml
# See https://docs.astral.sh/ruff/configuration/
line-length = 88 # Example, adjust as needed
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort (import sorting)
    "UP", # pyupgrade
    "PL", # Pylint
    "RUF",# Ruff-specific rules
    "C90", # McCabe complexity
    "ASYNC", # Ruff's async-specific rules
]
ignore = [
    "E501", # Line too long (Handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
]
target-version = "py313"

[tool.ruff.lint.isort]
known-first-party = ["apps.core"] # Helps ruff sort your project's imports correctly

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.30.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pydantic-to-typescript>=2.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "ruff>=0.11.10",
    "sqlacodegen>=3.0.0",
    "types-httplib2>=0.22.0.20250516",
    "types-python-jose>=3.4.0.20250516",
]
# indent-style = "space" # Default is space
# skip-magic-trailing-comma = false # Default is false
# line-ending = "lf" # Default is auto